syntax = "proto3";
option go_package = "./pb";
option csharp_namespace = "ArcadeSlipManager";

message ReportScoreForLeaderboardReq {
  // the game JWT which (together with the server token in the auth header) authenticates and identifies what leaderboard to update
  string gameToken = 1;
  int64 score = 2;
}

message ReportScoreForLeaderboardRes {
}
