syntax = "proto3";

option go_package = "./pb";
option csharp_namespace = "ArcadeSlipManager";

import "Protos/SlipManager/slips.proto";
import "Protos/SlipManager/pools.proto";
import "Protos/SlipManager/bonus.proto";
import "Protos/SlipManager/leaderboards.proto";

service SlipManager {
  // ---------------------------------------------------------------------------
  // Bonuses
  // ---------------------------------------------------------------------------
  
  rpc GiveBonus (GiveBonusReq) returns (GiveBonusRes);

  // ---------------------------------------------------------------------------
  // Direct slips
  // ---------------------------------------------------------------------------
  
  rpc CreateSlip (CreateSlipReq) returns (CreateSlipRes);

  rpc ActivateSlip (ActivateSlipReq) returns (ActivateSlipRes);

  rpc HeartbeatSlip (HeartbeatSlipReq) returns (HeartbeatSlipRes);

  rpc SlipDefeated (SlipDefeatedReq) returns (SlipDefeatedRes);

  rpc SlipSelfDefeated (SlipSelfDefeatedReq) returns (SlipSelfDefeatedRes);

  rpc SettleSlip (SettleSlipReq) returns (SettleSlipRes);

  rpc ReturnSlip (ReturnSlipReq) returns (ReturnSlipRes);

  // ---------------------------------------------------------------------------
  // Pools
  // ---------------------------------------------------------------------------

  rpc CreatePool (CreatePoolReq) returns (CreatePoolRes);

  rpc CreateSlipForPool (CreateSlipForPoolReq) returns (CreateSlipRes);

  rpc LockPool (LockPoolReq) returns (LockPoolRes);

  rpc SettlePool (SettlePoolReq) returns (SettlePoolRes);

  rpc ReturnPool (ReturnPoolReq) returns (ReturnPoolRes);

  rpc HeartbeatPool (HeartbeatPoolReq) returns (HeartbeatPoolRes);

  // ---------------------------------------------------------------------------
  // Leaderboards
  // ---------------------------------------------------------------------------

  rpc CreateSlipForLeaderboard (CreateSlipForLeaderboardReq) returns (CreateSlipRes);

  rpc ReportScoreForLeaderboard (ReportScoreForLeaderboardReq) returns (ReportScoreForLeaderboardRes);
}

message HeartbeatSlipRes {
  bool applied = 1;
}
message ReturnSlipRes {
  bool applied = 1;
}
message ReturnPoolRes {
  bool applied = 1;
}
message HeartbeatPoolRes {
  bool applied = 1;
}
